# DatastoreConnect

./: .env  .env.example  Cargo.toml  README.md
src/: lib.rs  libraries.rs
src/builders/: details.rs
src/domain/: datastore.rs  details.rs  errors.rs
src/infrastructure/: mysql.rs  postgres.rs  redis.rs  sqlite.rs  surrealdb.rs
src/logic/: datastore.rs  details.rs
src/tests/builders/: details.rs
src/tests/logic/: mysql.rs  postgres.rs  redis.rs  sqlite.rs  surrealdb.rs
