[package]
name = "datastore_connect"
version = "0.1.2"
authors = ["Christopher Stocks <christopher.b.stocks@gmail.com>"]
description = "A tokio-based rust library to enable easy connections to a variety of datastores."
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["connection", "async", "tokio"]
edition = "2021"
repository = "https://github.com/ChristopherBStocks/DatastoreConnect"

[dependencies]
# General
tokio = { version = "1.37.0", features = ["full"] } # Async Runtime
env_utils = { version = "0.2.0" } # Environment Variables + Utility
thiserror = { version = "1.0.58" } # Custom Errors

# Datastores
sqlx = { version = "0.7.4", features = ["runtime-tokio", "tls-rustls"], optional = true }
surrealdb = { version = "1.3.1", optional = true }
bb8-redis = { version = "0.15.0", optional = true }

[features]
default = []
# Datastore
mysql = ["sqlx/mysql"]
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]
redis = ["dep:bb8-redis"]
surreal = ["dep:surrealdb"]